[gd_scene load_steps=47 format=3 uid="uid://v4hdyv43fviq"]

[ext_resource type="Script" path="res://Scripts/gui.gd" id="1_7lbbs"]
[ext_resource type="Texture2D" uid="uid://b6ktc5ocw7nk0" path="res://Assets/GUI Elements/Component 2.svg" id="1_faiw5"]
[ext_resource type="Texture2D" uid="uid://bfif7f52awl3n" path="res://Assets/GUI Elements/Component 1.svg" id="2_bhmfr"]
[ext_resource type="Texture2D" uid="uid://dgd0prllka3ga" path="res://Assets/GUI Elements/TestElements/Галочка (1).svg" id="2_q5r26"]
[ext_resource type="Texture2D" uid="uid://cjq23ecoo8l6n" path="res://Assets/GUI Elements/Panel.svg" id="3_vba53"]
[ext_resource type="Texture2D" uid="uid://27o1yuutepdl" path="res://Assets/GUI Elements/IMG_9542.PNG" id="4_poqse"]
[ext_resource type="Texture2D" uid="uid://bnm5b76pgwmw4" path="res://Assets/GUI Elements/IMG_9581.png" id="5_b41tg"]
[ext_resource type="Texture2D" uid="uid://mnhb44dmhthw" path="res://Assets/GUI Elements/IMG_9584.PNG" id="6_3e2ao"]
[ext_resource type="Texture2D" uid="uid://bu7blins7htwg" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9690.PNG" id="7_wk03a"]
[ext_resource type="Texture2D" uid="uid://da8mo52vevwg8" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9691.PNG" id="8_8jdb8"]
[ext_resource type="Texture2D" uid="uid://drxqum8qqfdvs" path="res://Assets/GUI Elements/IMG_9582.PNG" id="8_q3f1w"]
[ext_resource type="Texture2D" uid="uid://cmgqc4glyb00p" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9692.PNG" id="9_vlwew"]
[ext_resource type="Texture2D" uid="uid://1n57sx248m0q" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9693.PNG" id="10_u57rj"]
[ext_resource type="Texture2D" uid="uid://dynkn05wdrpme" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9694.PNG" id="11_mr215"]
[ext_resource type="Texture2D" uid="uid://h0l2i7mjebfm" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9695.PNG" id="12_uwbtd"]
[ext_resource type="Texture2D" uid="uid://buxrle08hhpnq" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9696.PNG" id="13_n25gy"]
[ext_resource type="Texture2D" uid="uid://dtkpobe3l856v" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9698.PNG" id="15_151ge"]
[ext_resource type="Texture2D" uid="uid://iduch0usj8rl" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9699.PNG" id="16_5pws7"]
[ext_resource type="Texture2D" uid="uid://c61tq471il8ls" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9700.PNG" id="17_kr1cc"]
[ext_resource type="Texture2D" uid="uid://ndpjx0xsg0d7" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9701.PNG" id="18_cp1wt"]
[ext_resource type="Texture2D" uid="uid://qeii31fahqd5" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9703.PNG" id="20_u0kxo"]
[ext_resource type="Texture2D" uid="uid://572eifd4ok5o" path="res://Assets/GUI Elements/bar_satisfaction/new bar/IMG_9707.PNG" id="21_qex3i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x0il3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rll7c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vrufs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lcg36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_31bqq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dqnsd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3cevk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_inne1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dq3ed"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q53rv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4et7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_qex3i")
}, {
"duration": 1.0,
"texture": ExtResource("20_u0kxo")
}, {
"duration": 1.0,
"texture": ExtResource("18_cp1wt")
}, {
"duration": 1.0,
"texture": ExtResource("17_kr1cc")
}, {
"duration": 1.0,
"texture": ExtResource("16_5pws7")
}, {
"duration": 1.0,
"texture": ExtResource("15_151ge")
}, {
"duration": 1.0,
"texture": ExtResource("13_n25gy")
}, {
"duration": 1.0,
"texture": ExtResource("12_uwbtd")
}, {
"duration": 1.0,
"texture": ExtResource("11_mr215")
}, {
"duration": 1.0,
"texture": ExtResource("10_u57rj")
}, {
"duration": 1.0,
"texture": ExtResource("9_vlwew")
}, {
"duration": 1.0,
"texture": ExtResource("8_8jdb8")
}, {
"duration": 1.0,
"texture": ExtResource("7_wk03a")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fw81k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r8ai0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cl5lw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aecuh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qg28f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5lcvl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mu5j7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ludc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4vni"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iivgo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qkt0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v6rg0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oilv1"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 159.0
offset_top = -8.0
offset_right = 159.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7lbbs")

[node name="Reset" type="Button" parent="."]
layout_mode = 2
offset_left = -126.0
offset_top = 36.0001
offset_right = 208.0
offset_bottom = 360.0
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/icon_pressed_color = Color(0.933333, 0.721569, 0.572549, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_x0il3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rll7c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vrufs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lcg36")
theme_override_styles/focus = SubResource("StyleBoxEmpty_31bqq")
icon = ExtResource("1_faiw5")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 937.0
offset_top = -71.0
offset_right = 5090.0
offset_bottom = 1692.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_vba53")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -226.0
offset_top = 1299.89
offset_right = 3927.0
offset_bottom = 3062.89
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_vba53")

[node name="Cat_Icon" type="Sprite2D" parent="."]
position = Vector2(547, 1073.89)
scale = Vector2(1.37176, 1.37176)
texture = ExtResource("4_poqse")

[node name="Check" type="Button" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 1376.0
offset_right = 2404.0
offset_bottom = 2456.0
scale = Vector2(0.3, 0.3)
theme_override_colors/icon_pressed_color = Color(0.843137, 0.784314, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_dqnsd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3cevk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_inne1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dq3ed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q53rv")
icon = ExtResource("2_q5r26")

[node name="FinishMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = 5.0
offset_right = -162.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="BaseFinishPic" type="Sprite2D" parent="FinishMenu"]
position = Vector2(539, 1074)
texture = ExtResource("5_b41tg")
region_rect = Rect2(143.831, 211.511, 1, 1)

[node name="RelishBar" type="AnimatedSprite2D" parent="FinishMenu"]
position = Vector2(543, 1095)
sprite_frames = SubResource("SpriteFrames_4et7q")
frame_progress = 0.90299

[node name="Next" type="Button" parent="FinishMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 568.0
offset_top = 821.0
offset_right = 768.0
offset_bottom = 2101.0
grow_horizontal = 2
scale = Vector2(0.22, 0.22)
theme_override_colors/icon_pressed_color = Color(0.937255, 0.862745, 0.352941, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_fw81k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r8ai0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cl5lw")
theme_override_styles/focus = SubResource("StyleBoxTexture_aecuh")
icon = ExtResource("6_3e2ao")

[node name="Restart" type="Button" parent="FinishMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 213.0
offset_top = 804.0
offset_right = 413.0
offset_bottom = 2084.0
grow_horizontal = 2
scale = Vector2(0.257, 0.257)
theme_override_colors/icon_pressed_color = Color(0.878431, 0.670588, 0.913725, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_qg28f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5lcvl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mu5j7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8ludc")
icon = ExtResource("8_q3f1w")

[node name="Menu" type="Button" parent="."]
layout_mode = 2
offset_left = 677.0
offset_top = 45.0
offset_right = 926.0
offset_bottom = 293.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/icon_pressed_color = Color(0.729412, 0.741176, 0.839216, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_v4vni")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iivgo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3qkt0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6rg0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oilv1")
icon = ExtResource("2_bhmfr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Check" to="." method="_on_check_pressed"]
[connection signal="pressed" from="FinishMenu/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="FinishMenu/Restart" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
